--- a/main.ipynb
+++ b/main.ipynb
@@ -2,33 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "04ac3628-b3de-4bd4-83a2-dad9762ec125",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-12-20 13:42:05.997769: I tensorflow/core/util/port.cc:111] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-12-20 13:42:06.062045: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-12-20 13:42:06.340393: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-12-20 13:42:06.340412: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-12-20 13:42:06.342717: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-12-20 13:42:06.521158: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-12-20 13:42:06.522661: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-12-20 13:42:07.284175: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:nncf:NNCF initialized successfully. Supported frameworks detected: torch, tensorflow, onnx, openvino\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import PyQt5\n",
@@ -56,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "c0682cd1-c787-4a1a-96d0-836050cdd495",
    "metadata": {},
    "outputs": [],
@@ -66,17 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "f00853c7-c4fd-45c7-b209-b37bf894f6ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f854da8bbe0>"
+       "<matplotlib.image.AxesImage at 0x7f9c8e745300>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "44ed4a1e-0eb6-4900-8105-c40636ee3c59",
    "metadata": {},
    "outputs": [],
@@ -241,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "c720d4bc-8ba2-4b87-aa42-895756fef387",
    "metadata": {},
    "outputs": [
@@ -281,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6435d3a1-fc22-455f-94cf-e35973ab3c8d",
    "metadata": {},
    "outputs": [
@@ -316,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1e4d11a7-e7ee-4443-8bd1-4c5da93c357b",
    "metadata": {},
    "outputs": [],
@@ -404,10 +381,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5a21a688-247c-4786-9dcb-0bb947d650e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input text: dear did my you friend it is know my friends that that is more i house go to bigger her see house in you than later england at sunday my house best ken gwon\n",
+      "\n",
+      "generated text: Do you know my friend that it is more important to go to her house in London than to go to my house in Beijing on a Sunday?\n",
+      "\n",
+      "compare text: [-'dear did my you friend it is'][+'Do you'] know my friend[-'s'] that [-'tha'][+'i']t is more i[-' house go to bigger her see house in you than later england at sunday my house best ken gwon'][+'mportant to go to her house in London than to go to my house in Beijing on a Sunday?']\n"
+     ]
+    }
+   ],
    "source": [
     "# 문자열 출력 (입력 문자열, 문법 교정 문자열)\n",
     "print(f\"input text: {check_text}\\n\")\n",
